@@ -132,11 +132,14 @@ f95.all.cross: gfortran-cross$(exeext)
 f95.start.encap: gfortran$(exeext)
 f95.rest.encap:
 
+f95.srcinfo: fortran/gfortran.info
+	-cp -p $^ $(srcdir)/fortran
+
 f95.tags: force
 	cd $(srcdir)/fortran; etags -o TAGS.sub *.c *.h; \
 	etags --include TAGS.sub --include ../TAGS.sub
 
-f95.info: $(srcdir)/fortran/gfortran.info
+f95.info: fortran/gfortran.info
 f95.dvi: fortran/gfortran.dvi
 f95.generated-manpages:
 
@@ -147,14 +150,14 @@ check-f95 : check-gfortran
 lang_checks += check-gfortran
 
 # GFORTRAN documentation.
-$(srcdir)/fortran/gfortran.info: $(srcdir)/fortran/gfortran.texi \
+fortran/gfortran.info: $(srcdir)/fortran/gfortran.texi \
 			$(srcdir)/doc/include/fdl.texi \
 			$(srcdir)/doc/include/gpl.texi \
 			$(srcdir)/doc/include/funding.texi \
 			$(srcdir)/doc/include/gcc-common.texi
 	if [ x$(BUILD_INFO) = xinfo ]; then \
-	  rm -f $(srcdir)/fortran/gfortran.info-*; \
-	  cd $(srcdir)/fortran && $(MAKEINFO) -I../doc/include -o gfortran.info gfortran.texi; \
+	  rm -f fortran/gfortran.info-*; \
+	  $(MAKEINFO) -I$(srcdir)/doc/include -o fortran/gfortran.info $(srcdir)/fortran/gfortran.texi; \
 	else true; fi
 
 fortran/gfortran.dvi: $(srcdir)/fortran/gfortran.texi \
@@ -196,15 +199,15 @@ f95.install-common: installdirs
 # Install the info documentation in $(infodir).
 # Taken from G77 (but then, what is not...)
 f95.install-info: f95.info installdirs
-	if [ -f $(srcdir)/fortran/gfortran.info ] ; then \
+	if [ -f fortran/gfortran.info ] ; then \
 	  rm -f $(DESTDIR)$(infodir)/gfortran.info*; \
-	  for f in $(srcdir)/fortran/gfortran.info*; do \
+	  for f in fortran/gfortran.info*; do \
 	      realfile=`echo $$f | sed -e 's|.*/\([^/]*\)$$|\1|'`; \
 	      $(INSTALL_DATA) $$f $(DESTDIR)$(infodir)/$$realfile; \
 	  done; \
 	  chmod a-x $(DESTDIR)$(infodir)/gfortran.info*; \
 	else true; fi
-	@if [ -f $(srcdir)/fortran/gfortran.info ] ; then \
+	@if [ -f fortran/gfortran.info ] ; then \
 	  if $(SHELL) -c 'install-info --version | sed 1q | fgrep -s -v -i debian' >/dev/null 2>&1; then \
 	  echo " install-info --info-dir=$(DESTDIR)$(infodir) $(DESTDIR)$(infodir)/gfortran.info"; \
 	    install-info --info-dir=$(DESTDIR)$(infodir) $(DESTDIR)$(infodir)/gfortran.info || : ; \
@@ -238,7 +241,7 @@ f95.distclean:
 
 f95.extraclean:
 f95.maintainer-clean:
-	-rm -f $(srcdir)/fortran/gfortran.info* $(srcdir)/fortran/gfortran.*aux
+	-rm -f fortran/gfortran.info* fortran/gfortran.*aux
 
 #
 # Stage hooks:
